# automate-pheno-comparisons

./: .gitignore  Jenkinsfile  LICENSE  LOCAL_PIPELINE.md  Makefile  PAPER2025.md  README.md  install.sh  pyproject.toml  requirements.txt  run_pipeline.py
scripts/: h2-exomiser-load.sql
src/monarch_semsim/cli/: cli.py
src/monarch_semsim/exomiser/: exomiserdb.py
